<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCACA"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".MainActivity2">


    <com.google.android.material.button.MaterialButton
        android:onClick="onPut3Activity"
        android:id="@+id/button_1"
        style="@style/Button.SecondActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/policy"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        style="@style/Button.SecondActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:backgroundTint="@color/white"
        android:text="@string/product_category"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        style="@style/Button.SecondActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/origin_country"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        style="@style/Button.SecondActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/band"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <TextView
        android:id="@+id/info_of_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/finish_all_activity"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="#E57373"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/finish_all_activiti"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/info_of_result" />


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>